changed minor ui details

--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -5,7 +5,7 @@
 
 
     <RelativeLayout
-        android:background="?blurOverLayColor"
+        android:background="?attr/navblurOverLayColor"
         android:id="@+id/mainView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
