--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -6,13 +6,13 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/styleCard"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="@dimen/margin_default"
+        android:layout_height="100dp"
+        android:layout_margin="@dimen/margin_small"
         android:foreground="?attr/selectableItemBackground"
         android:checkable="true"
         android:stateListAnimator="@animator/selected_animator"
         app:cardBackgroundColor="?attr/dividerColor"
-        app:cardCornerRadius="@dimen/radius_small"
+        app:cardCornerRadius="@dimen/radius_default"
         app:cardElevation="0dp">
 
         <ImageView
@@ -28,7 +28,7 @@
             android:textAlignment="center"
             android:transitionName="@string/style_text_transtition"
             android:text="Motiv"
-            android:textSize="@dimen/min_quote_size"
+            android:textSize="@dimen/default_quote_size"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </com.google.android.material.card.MaterialCardView>
