--- a/app/src/main/res/layout/profile_quote_card.xml
+++ b/app/src/main/res/layout/profile_quote_card.xml
@@ -43,6 +43,7 @@
                 android:stateListAnimator="@animator/list_animator"
                 android:tooltipText="Alterar foto de perfil"
                 android:transitionName="@string/profilepictransiction"
+                app:civ_circle_background_color="@color/colorAccent"
                 app:civ_border_color="?android:textColorPrimary"
                 app:civ_border_width="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
