--- a/app/src/main/res/layout/profile_tutorial_dialog_layout.xml
+++ b/app/src/main/res/layout/profile_tutorial_dialog_layout.xml
@@ -9,10 +9,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/blurOverLayColor"
+        android:background="?android:colorBackground"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/padding_default">
+
+        <View
+            android:id="@+id/topAnimation"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:background="@drawable/motiv_gradient"
+            android:backgroundTint="?colorPrimaryDark" />
 
         <TextView
             android:layout_width="match_parent"
