--- a/manager/src/main/res/layout/new_style_form.xml
+++ b/manager/src/main/res/layout/new_style_form.xml
@@ -66,7 +66,7 @@
 
             <include
                 android:id="@+id/styleTabs"
-                layout="@layout/style_tabs_layout" />
+                layout="@layout/styles_recycler" />
 
             <LinearLayout
                 android:layout_width="match_parent"
