--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
+        android:paddingBottom="@dimen/padding_big"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
