ajustes em motiv+: interface melhorada para preview de estilos visualização de estilos alterada
ajustes motiv:
nova tela de usuários do app
tela de pesquisa melhorada
card de frases melhorado

futuras implementações:
preview de estilos em tela de novo post.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:layout_above="@id/mainBottom"
-            app:cardBackgroundColor="?attr/dividerColor"
+            app:cardBackgroundColor="?android:colorBackground"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             app:cardCornerRadius="@dimen/radius_default"
