--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -13,7 +13,7 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/styleTabs"
+            android:layout_above="@id/style_preview_layout"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
             app:cardCornerRadius="@dimen/radius_default"
