--- a/app/src/main/res/layout/profile_quote_card.xml
+++ b/app/src/main/res/layout/profile_quote_card.xml
@@ -6,6 +6,7 @@
 
 
     <RelativeLayout
+        android:background="@drawable/motiv_gradient"
         android:id="@+id/quoteCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,7 +43,7 @@
                 android:padding="@dimen/padding_default"
                 android:stateListAnimator="@animator/list_animator"
                 android:tooltipText="Alterar foto de perfil"
-                android:transitionName="@string/profilepictransiction"
+                android:transitionName="@string/user_pic_transaction"
                 app:civ_circle_background_color="@color/colorAccent"
                 app:civ_border_color="?android:textColorPrimary"
                 app:civ_border_width="0dp"
@@ -64,54 +65,59 @@
                 android:textStyle="bold"
                 tools:text="Caio Alves Ferreira" />
 
-            <RelativeLayout
+            <LinearLayout
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                app:layout_constraintTop_toBottomOf="@id/profilepic"
-                tools:layout_editor_absoluteY="16dp">
+                android:paddingVertical="@dimen/padding_default"
+                app:layout_constraintTop_toBottomOf="@id/profilepic">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/followButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/padding_default"
-                    android:layout_toStartOf="@id/messageButton"
-                    android:text="@string/follow_user"
-                    android:textColor="?android:textColorPrimary"
-                    android:textStyle="bold"
-                    android:visibility="gone"
-                    app:cornerRadius="@dimen/radius_small"
-                    app:elevation="0dp"
-                    tools:visibility="visible" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/messageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="@dimen/padding_default"
-                    android:drawableEnd="@drawable/ic_paper_plane"
-                    android:drawableTint="@color/white"
-                    android:text="@string/message_user"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    app:cornerRadius="@dimen/radius_small"
-                    app:elevation="0dp"
-                    app:iconTint="@color/white"
-                    tools:visibility="visible" />
-
-            </RelativeLayout>
+            </LinearLayout>
 
 
         </LinearLayout>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/messageButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginBottom="?attr/actionBarSize"
+            android:layout_toEndOf="@id/followButton"
+            android:drawableTint="@color/white"
+            android:padding="@dimen/padding_small"
+            android:text="@string/message_user"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:backgroundTint="?android:colorBackground"
+            app:cornerRadius="@dimen/radius_default"
+            app:icon="@drawable/ic_paper_plane"
+            app:iconGravity="textEnd"
+            app:iconTint="?android:textColorPrimary"
+            tools:visibility="visible" />
 
+        <CheckBox
+            android:id="@+id/followButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginBottom="?attr/actionBarSize"
+            android:background="@drawable/follow_button_shape"
+            android:button="@color/transparent"
+            android:checked="true"
+            android:paddingHorizontal="@dimen/padding_big"
+            android:paddingVertical="@dimen/padding_default"
+            android:text="@string/follow_user"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:visibility="gone"
+            tools:visibility="visible" />
     </RelativeLayout>
 
 
