--- a/base/src/main/res/values/themes.xml
+++ b/base/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="fontFamily">@font/questrial</item>
         <item name="font">@font/questrial</item>
         <item name="android:colorBackground">@color/md_white</item>
-        <item name="dividerColor">@color/material_grey200</item>
+        <item name="dividerColor">@color/material_grey100</item>
         <item name="navblurOverLayColor">@color/lwhite</item>
         <item name="blurOverLayColor">@color/lwhite</item>
         <item name="colorPrimary">@color/material_purple400</item>
@@ -13,6 +13,7 @@
         <item name="colorAccent">@color/material_purpleA100</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
+        <item name="actionBarStyle">@style/ActionBar</item>
         <item name="searchViewStyle">@style/Searchtheme</item>
         <item name="snackbarStyle">@style/AppSnackbar</item>
         <item name="popupMenuStyle">@style/PopupMenu</item>
