--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -5,32 +5,33 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/styleCard"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="@dimen/margin_small"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_margin="1dp"
         android:foreground="?attr/selectableItemBackground"
+        android:stateListAnimator="@animator/list_animator"
         android:checkable="true"
-        android:stateListAnimator="@animator/selected_animator"
+        app:cardCornerRadius="0dp"
+        app:strokeColor="@color/selected_style"
         app:cardBackgroundColor="?attr/dividerColor"
-        app:cardCornerRadius="@dimen/radius_default"
+        app:strokeWidth="1dp"
         app:cardElevation="0dp">
 
         <ImageView
             android:id="@+id/styleImage"
-            android:scaleType="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
 
         <TextView
-            android:layout_centerInParent="true"
             android:id="@+id/styleText"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:transitionName="@string/style_text_transtition"
-            android:text="Motiv"
-            android:textSize="@dimen/default_quote_size"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="Motiv"
+            android:textAlignment="center"
+            android:transitionName="@string/style_text_transtition" />
     </com.google.android.material.card.MaterialCardView>
 
 </layout>
