--- a/manager/src/main/res/layout/style_tabs_layout.xml
+++ b/manager/src/main/res/layout/style_tabs_layout.xml
@@ -5,7 +5,7 @@
 
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/styleTabs"
+        android:id="@+id/style_preview_layout"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?android:colorBackground"
