--- a/manager/src/main/res/layout/styles_recycler.xml
+++ b/manager/src/main/res/layout/styles_recycler.xml
@@ -11,9 +11,9 @@
         android:id="@+id/stylesRecycler"
         tools:listitem="@layout/style_preview_card"
         android:orientation="vertical"
-        app:spanCount="3"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:itemCount="4"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:spanCount="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </layout>
