--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -6,6 +6,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/quotesrecyclerview"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:itemCount="4"
