--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -5,9 +5,9 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/userCard"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
+        android:layout_margin="@dimen/margin_small"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_default"
         android:background="?attr/dividerColor"
         android:stateListAnimator="@animator/list_animator"
         app:cardCornerRadius="@dimen/radius_default">
@@ -15,8 +15,7 @@
         <ImageView
             android:id="@+id/usercover"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:src="@drawable/motiv_gradient" />
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
